<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.unick.bento.fragments.CreateRoomFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateRoomFragment_hello" />

        <TextView
            android:id="@+id/textView_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_hello"
            android:layout_marginTop="30dp"
            android:text="@string/CreateRoomFragment_step1" />
        <Spinner
            android:id="@+id/spinner_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_step1">
        </Spinner>

        <TextView
            android:id="@+id/textView_step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_shop"
            android:layout_marginTop="30dp"
            android:text="@string/CreateRoomFragment_step2" />
        <Spinner
            android:id="@+id/spinner_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_step2">
        </Spinner>

        <TextView
            android:id="@+id/textView_step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_member"
            android:layout_marginTop="30dp"
            android:text="@string/CreateRoomFragment_step3" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_step3"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/CreateRoomFragment_buttonStart"/>

    </RelativeLayout>


</FrameLayout>
